# ConSTRain

./: .gitignore  Cargo.toml  README.md  environment.yaml
ConSTRain/: Cargo.toml  Cross.toml
ConSTRain/src/: cli.rs  cnv.rs  genotyping.rs  io.rs  karyotype.rs  lib.rs  main.rs  repeat.rs  rhtslib_reimplement.rs  rhtslib_reimplements.rs  utils.rs
ConSTRain/src/io/: bed.rs  json.rs  vcf.rs
ConSTRain/src/utils/: cigar.rs  cigar_utils.rs  io_utils.rs  vcf.rs
ConSTRain/tests/: integration_tests.rs
ConSTRain/tests/data/: APC_repeats.bed  cnv_test.bed  duplication_cn3_out1.bam  duplication_cn3_out1.bam.bai  h_sapiens_male.json
cn_guided_str_genotyping/: Cargo.toml
cn_guided_str_genotyping/src/: genotyping.rs  lib.rs  main.rs  repeat.rs  utils.rs
cn_guided_str_genotyping/src/utils/: io_utils.rs
constrain_utils/vcf_to_csv/: Makefile  go.mod  go.sum  main.go
constrain_utils/vcf_to_csv/cmd/: root.go
constrain_utils/vcf_to_csv/pkg/: vcfconv.go
constrain_utils/vcf_to_csv/pkg/internal/consts/: consts.go
constrain_utils/vcf_to_csv/pkg/internal/csv/: csv.go
constrain_utils/vcf_to_csv/pkg/internal/fileutil/: fileutil.go
constrain_utils/vcf_to_csv/pkg/internal/job/: job.go
constrain_utils/vcf_to_csv/pkg/internal/vcf/: vcf.go
hide/: main.rs
resources/h_sapiens/: h_sapiens_female.json  h_sapiens_male.json
resources/m_acuminata/: dh_pahang_v4_strs.bed  m_acuminata.json
scripts/: csv_from_vcf.py  depth_overview.py
src/: main.rs
