[package]
name = "constrain"
version = "0.8.2"
edition = "2021"

[lib]
name = "constrain"
path = "src/lib.rs"

[[bin]]
name = "ConSTRain"
path = "src/bin/ConSTRain.rs"

[profile.release]
panic = 'abort'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.4.11", features = ["derive"] }
csv = "1.3.0"
env_logger = "0.11.3"
log = "0.4.22"
ndarray = "0.15.6"
rayon = "*"
rust-htslib = { version = "0.47.0", default-features = false, features = ["bzip2", "lzma"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "*"
